# IPgen

./: .gitignore  README.md  example.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
src/: requirements.txt
src/IPgen/: ArgParser.py  FileSaver.py  IPAddress.py  IP_Partition.py  IPrange.py  __main__.py  cIPrange.py  const.py  generators.py  ipinfo.py  main.py  util.py
tests/: conftest.py  test_API.py  test_SavingToFile.py  test_addresses.py  test_argparse.py  test_iprange.py  test_run.py
