[metadata]
name = "IPgen"
description = "Generate list of random IP addresses, get their info in JSON format and/or export them to a file"
version = 1.0.0
author = A-Rave-Mistake
author_email = adrian.urbaniak1336@gmail.com
license = MIT
readme = README
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.9
package_dir =
    = src
packages =
    IPgen
zip_safe = no

[options.entry_points]
console_scripts =
    executable-name = IPgen.main:main

[options.extras_require]
testing =
    pytest>=7.2.0