[metadata]
name = IPgen
description = Generate list of random IP addresses, get their info in JSON format and/or export them to a file
version = 1.0.0
author = Bag-Of-Snacks
author_email = adrian.urbaniak1336@gmail.com
license = MIT
readme = README
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11

[options]
packages =
    IPgen
python_requires = >=3.11
install_requires =
    requests>=2.28.2, <3.0
    urllib3>=1.26.15, <2.0
package_dir =
    = src
zip_safe = no

[build-system]
requires = ["setuptools~=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[options.entry_points]
console_scripts =
    executable-name = IPgen.main:main

[options.extras_require]
testing =
    pytest>=7.2.0

[coverage:run]
source = your_package
omit = tests/*

[coverage:report]
show_missing = True

[tool:pytest]
addopts =
    --cov=IPgen
    --cov-report=term-missing